--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>SLITHER GOD</title>
 <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +12,6 @@
 <div id="menu">
     <h1>SLITHER GOD</h1>
 
-    <label>Pilih Skin</label>
     <select id="skinSelect">
         <option value="green">Green Viper</option>
         <option value="blue">Blue Neon</option>
@@ -30,7 +29,7 @@
     <button id="boostBtn">BOOST</button>
 </div>
 
-<!-- Joystick -->
+<!-- JOYSTICK -->
 <div id="joystick">
     <div id="stick"></div>
 </div>
